--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.gjf.lovezzu" >
 
     <application
-        android:name=".entity.CheckLoginApplication"
+       android:name=".entity.CheckLoginApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".activity.UserLoginActivity"/>
         <activity android:name=".activity.UserInfoActivity"/>
+        <service android:name=".service.CheckLogin"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
