2017/03/15夜晚 1：图片选择框和图片上传代码已经写好，但是目前还不知道怎么获取路径。 2：个人信息查看和修改已经完成，但还需小幅度调整。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.gjf.lovezzu"
-        minSdkVersion 10
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -37,4 +37,10 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'me.iwf.photopicker:PhotoPicker:0.9.5@aar'
     compile project(':flashview')
+
+
+    compile 'me.iwf.photopicker:PhotoPicker:0.9.5@aar'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.yancy.imageselector:imageselector:1.2.0'//图片选择器（上传头像使用）
 }
