2017/03/23 PM22.09 学校和社会图片下了刷新获取新的内容。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:name="me.iwf.photopicker.PhotoPagerActivity"
             />
+        <activity android:name=".activity.saylvoeActivity.SayLoveActivity"/>
+        <activity android:name=".activity.saylvoeActivity.IWantSayLoveActivity"/>
 
 
         <service android:name=".service.CheckLogin" />
