--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.yancy.imageselector:imageselector:1.2.0'//图片选择器（上传头像使用）
+    compile 'com.android.support:design:24.2.1'
 }
