2017/04/08 1、新闻二级界面设计基本完成，网络操作未进行。 2、完善相关逻辑。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".activity.saylvoeActivity.SayLoveActivity"/>
         <activity android:name=".activity.saylvoeActivity.IWantSayLoveActivity"/>
         <activity android:name=".activity.TaoyuActivity"/>
+        <activity android:name=".activity.schoolnewsActivity.SchoolNewsSubjectActivity"/>
 
 
 
