--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name=".entity.CheckLoginApplication"
         android:allowBackup="true"
-        android:icon="@drawable/lovezuu"
+        android:icon="@drawable/lovezuu_1"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
