一起玩校园活动详情页，待调试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,8 @@
 
             </intent-filter>
         </activity>
+        <activity android:name=".activity.palytogether.PlaySchoolActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"/>
         <service android:name=".service.CheckLogin" />
 
     </application>
