一起玩二级三级完工

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
 
             </intent-filter>
         </activity>
+        <activity android:name=".activity.palytogether.PlayGroupListActivity"/>
         <activity android:name=".activity.palytogether.PlaySchoolActivity"
             android:windowSoftInputMode="adjustPan"/>
         <service android:name=".service.CheckLogin" />
