--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,34 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
+        <!-- 设置环信应用的AppKey -->
+        <meta-data
+            android:name="EASEMOB_APPKEY"
+            android:value="	1113170131115043#lovezzu" />
+        <!-- 声明SDK所需的service SDK核心功能-->
+        <service
+            android:name="com.hyphenate.chat.EMChatService"
+            android:exported="true" />
+        <service
+            android:name="com.hyphenate.chat.EMJobService"
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <!-- 声明SDK所需的receiver -->
+        <receiver android:name="com.hyphenate.chat.EMMonitorReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+                <data android:scheme="package" />
+            </intent-filter>
+            <!-- 可选filter -->
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
+
+
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTask">
@@ -60,14 +88,16 @@
         <activity android:name=".activity.taoyu.TaoyuSearchActivity" />
         <activity android:name=".activity.taoyu.TaoyuPublishGoodActivity" />
         <activity android:name=".activity.treehole.TreeHoleActivity" />
-        <activity android:name=".activity.parttimejob.PartTimeJobActivity"/>
-        <activity android:name=".activity.parttimejob.AddJopActivity"
-            android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".activity.parttimejob.JobInfoActivity"/>
+        <activity android:name=".activity.parttimejob.PartTimeJobActivity" />
+        <activity
+            android:name=".activity.parttimejob.AddJopActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".activity.parttimejob.JobInfoActivity" />
         <activity
             android:name=".activity.treehole.AddTreeHoleActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activity.schoolnewsActivity.SchoolNewsWebView"/>
+        <activity android:name=".activity.schoolnewsActivity.SchoolNewsWebView" />
+        <activity android:name=".fragment.friends.AddContactActivity" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -77,5 +107,20 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 </manifest>
