--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            //jni库的调用会到资源文件夹下libs里面找so文件
 
+            jniLibs.srcDirs = ['src/main/libs']
+        }
+    }
 }
 
 dependencies {
@@ -46,4 +52,5 @@ dependencies {
     compile 'cn.bingoogolapple:bga-refreshlayout:1.1.7@aar'
     compile 'org.xutils:xutils:3.5.0'
     compile 'org.jsoup:jsoup:1.10.2'
+    compile project(':IMKit')
 }
